Trying new paths

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 </header>
 <h1>The Courtesy Turners</h1>
 <ul style="list-style-type:none;" id="tunes">
-    <a href="./thecourtesyturners/index.html">
+    <a href="thecourtesyturners/index.html">
         <div>
          <span>The Courtesy Turners</span>
         </div>  
     </a>
     </br>
-    <a href="./lexingtionopencontraband/index.html">
+    <a href="lexingtionopencontraband/index.html">
         <div>
-         <span>Lexington Open Contra Dance Band Tune Book</span>
+         <span>Lexington Area Open Band Contra Dance Tunes</span>
         </div>  
     </a>
 </ul>
