--- a/TheCourtesyTurners/Spotted_Pony.html
+++ b/TheCourtesyTurners/Spotted_Pony.html
@@ -63,7 +63,9 @@
   <header>
   </header>
   <div class="container">
+    <a href="../index.html"><h1>johnmicheaelmurner.github.io</h1></a>
     <hr>
+    <a href="index.html"><div class="cttunesheader">The Courtesy Turner Tunes</div></a>
     <div id="paper"></div>
     <div id="audio"></div>
 	  <br>
