--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 </head>
 <body>
 <header>
-    <h1>johnmicheaelmurner.github.io</h1>
+    <a href="index.html"><h1>johnmicheaelmurner.github.io</h1></a>
 </header>
-<h1>The Courtesy Turners</h1>
 <ul style="list-style-type:none;" id="tunes">
     <a href="thecourtesyturners/index.html">
         <div>
