--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="index.html"><h1>johnmicheaelmurner.github.io</h1></a>
 </header>
 <ul style="list-style-type:none;" id="tunes">
-    <a href="thecourtesyturners/index.html">
+    <a href="courtesyturners/index.html">
         <div>
          <span>The Courtesy Turners</span>
         </div>  
