--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -17,6 +17,11 @@
              <span>L'Air Mignonette A</span>
             </div>  
         </a>
+        <a href="./McPhersons_Lament.html">
+            <div>
+             <span>McPhersons_Lament</span>
+            </div>  
+        </a>
         <a href="./Spotted_Pony.html">
             <div>
              <span>Spotted Pony D</span>
