--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -22,9 +22,9 @@
              <span>McPhersons_Lament</span>
             </div>  
         </a>
-        <a href="./Spotted_Pony.html">
+        <a href="./Salt_Spring.html">
             <div>
-             <span>Spotted Pony D</span>
+             <span>Salt Spring A</span>
             </div>  
         </a>
     </ul>
