--- a/courtesyturners/Salt_Spring.html
+++ b/courtesyturners/Salt_Spring.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>Spotted Pony</title>
+  <title>L'Air Mignonne by Simon Riopel </title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -62,10 +62,9 @@
 <body>
   <header>
   </header>
+  <a href="../index.html"><h1>johnmicheaelmurner.github.io</h1></a>
   <div class="container">
-    <a href="../index.html"><h1>johnmicheaelmurner.github.io</h1></a>
     <hr>
-    <a href="index.html"><div class="cttunesheader">The Courtesy Turner Tunes</div></a>
     <div id="paper"></div>
     <div id="audio"></div>
 	  <br>
@@ -73,16 +72,15 @@
 	  <a id="midi-download" download="example.mid"></a>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
 X: 1
-T: Cooley's
+T: Salt Spring
+R: reel
 M: 4/4
 L: 1/8
-R: reel
-K: Emin
-|:D2|EB{c}BA B2 EB|~B2 AB dBAG|FDAD BDAD|FDAD dAFD|
-EBBA B2 EB|B2 AB defg|afe^c dBAF|DEFD E2:|
-|:gf|eB B2 efge|eB B2 gedB|A2 FA DAFA|A2 FA defg|
-eB B2 eBgB|eB B2 defg|afe^c dBAF|DEFD E2:|
-    </textarea>
+K: Amaj
+e2 e>e fe2f-|fe c/B/A c2 c/B/A/c/|B2 B>B cB2c-|cB A<G F3A|
+B2 B>B cB2c-|cB A<G F3E|F2 A>A BA F/E/D| E4-EA/B/ c/B/A/G/ ]|
+|:F2G2 A2c2|F2G2 A4|F2G2 A2c2|1 cB3-BA/B/ c/B/A/G/:|2 cB3- B2 A/B/c/d/||
+</textarea>
   </div>
 </body>
 </html>
