--- a/courtesyturners/Salt_Spring.html
+++ b/courtesyturners/Salt_Spring.html
@@ -72,7 +72,7 @@
 	  <a id="midi-download" download="example.mid"></a>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
 X: 1
-T: Salt Spring
+T: Salt Spring by John Reischman
 R: reel
 M: 4/4
 L: 1/8
