--- a/courtesyturners/HuntingTheBuffalo.html
+++ b/courtesyturners/HuntingTheBuffalo.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>The Courtesy Turners </title>
+  <title>Hunting The Buffalo Dmaj 4/4</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -68,19 +68,17 @@
     <div id="paper"></div>
     <div id="audio"></div>
 	  <br>
-	  <button id="midi">Download MIDI</button>
-	  <a id="midi-download" download="example.mid"></a>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
 X: 4
 T: Hunting The Buffalo
-R: barndance
+R: reel
 M: 4/4
 L: 1/8
 K: Dmaj
-E2|F4 BAGA|BAGF E2D2|F3A E3 c|BAGA BEAB|
-c3e cBAB|c3e cBAB|F3A E3 c|BAGB ABce||
-f3a fece|f3a fecA|F3A E3c|BAGA BEce|
-f3a fece|f3a fecA|F3A E3c|BAGB A||
+e2|"D"f4 fede|fedc B2A2|f4 fede|"D"fefa "C" b2 a2|
+"D"f4 fede|fedc B2A2|f4 ed c2|"Bm"B3 A B2||
+"G"A2|B3 A B2 A2|BABc d2 A2|BABc d2 de|"D"f2f2 e2d2|
+"G"B3 A B2 A2|BABc d2 de|"D"f2f2 e2d2|"Bm"B3 A B2||
     </textarea>
   </div>
 </body>
