--- a/courtesyturners/McPhersons_Lament.html
+++ b/courtesyturners/McPhersons_Lament.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>The Courtesy Turners </title>
+  <title>Macpherson's Lament Emix 4/4</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -68,8 +68,6 @@
     <div id="paper"></div>
     <div id="audio"></div>
 	  <br>
-	  <button id="midi">Download MIDI</button>
-	  <a id="midi-download" download="example.mid"></a>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
 X: 3
 T: Macpherson's Lament
