--- a/courtesyturners/build_tools/anchor.html
+++ b/courtesyturners/build_tools/anchor.html
@@ -1,5 +1,5 @@
-<a href=$file_name>
-    <div>
-     <span>$slug</span>
-    </div>  
-</a>
+<tr>
+    <td><a href="$file_name">$tunename</a></td>
+    <td>$tunekey</td>
+    <td>$tunemeter</td>
+</tr>
