--- a/courtesyturners/build_tools/index.html
+++ b/courtesyturners/build_tools/index.html
@@ -12,7 +12,9 @@
 <a href="../index.html"><div class="header">johnmicheaelmurner.github.io</div></a>
 <h2 id="tunes_header">The Courtesy Turners Tunes</h2>
     <ul style="list-style-type:none;" id="tunes">
+        <table>
         $tunes
+        </table>          
     </ul>
 </body>
 </html>
