--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -12,23 +12,29 @@
 <a href="../index.html"><div class="header">johnmicheaelmurner.github.io</div></a>
 <h2 id="tunes_header">The Courtesy Turners Tunes</h2>
     <ul style="list-style-type:none;" id="tunes">
-        <a href=./HuntingTheBuffalo.html>
-    <div>
-     <span>HuntingTheBuffalo</span>
-    </div>  
-</a><a href=./LAir_Mignotte.html>
-    <div>
-     <span>LAir Mignotte</span>
-    </div>  
-</a><a href=./McPhersons_Lament.html>
-    <div>
-     <span>McPhersons Lament</span>
-    </div>  
-</a><a href=./Salt_Spring.html>
-    <div>
-     <span>Salt Spring</span>
-    </div>  
-</a>
+        <table>
+        <tr>
+    <td><a href="HuntingTheBuffalo.html">Hunting The Buffalo</a></td>
+    <td>Dmaj</td>
+    <td>4/4</td>
+</tr>
+<tr>
+    <td><a href="LAir_Mignotte.html">L'Air Mignonne by Simon Riopel</a></td>
+    <td>Amaj</td>
+    <td>4/4</td>
+</tr>
+<tr>
+    <td><a href="McPhersons_Lament.html">Macpherson's Lament</a></td>
+    <td>Emix</td>
+    <td>4/4</td>
+</tr>
+<tr>
+    <td><a href="Salt_Spring.html">Salt Spring by John Reischman</a></td>
+    <td>Amaj</td>
+    <td>4/4</td>
+</tr>
+
+        </table>          
     </ul>
 </body>
 </html>
