--- a/courtesyturners/LAir_Mignotte.html
+++ b/courtesyturners/LAir_Mignotte.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
+
+    var visualOptions = {'responsive': 'resize' };
     var abcjsEditor;
 
     window.onload = function () {
@@ -23,11 +25,11 @@
         },
         abcjsParams: {
           add_classes: true,
+          responsive: 'resize',
           clickListener: clickListener
         },
         selectionChangeCallback: selectionChangeCallback
       });
-
       document.getElementById("midi").addEventListener("click", downloadMidi);
     };
 
