--- a/courtesyturners/build_tools/tune.html
+++ b/courtesyturners/build_tools/tune.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
+    
+    var visualOptions = { responsive: 'resize' };
     var abcjsEditor;
 
     window.onload = function () {
@@ -23,6 +25,7 @@
         },
         abcjsParams: {
           add_classes: true,
+          responsive: 'resize',
           clickListener: clickListener
         },
         selectionChangeCallback: selectionChangeCallback
