--- a/courtesyturners/HuntingTheBuffalo.html
+++ b/courtesyturners/HuntingTheBuffalo.html
@@ -23,6 +23,7 @@
         },
         abcjsParams: {
           add_classes: true,
+          responsive: 'resize',
           clickListener: clickListener
         },
         selectionChangeCallback: selectionChangeCallback
