--- a/courtesyturners/Door_County_2.html
+++ b/courtesyturners/Door_County_2.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>Macpherson's Lament Emix 4/4</title>
+  <title>Door County #2 by Larry Unger Dmaj 4/4</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -71,16 +71,17 @@
     <div id="audio"></div>
 	  <br>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
-X: 3
-T: Macpherson's Lament
-R: barndance
+X: 4
+T: Door County #2 by Larry Unger
+R: reel
 M: 4/4
 L: 1/8
-K: Emix
-|:E2|A3 B c2 BA|BABc B2 EF|A3 B c3B A2|F6 EF|
-A3 B c2 BA|BABc B2 EF|A3 c BA F2|E6:|
-|:cd|e3 c dcBA|c2 B2 B2 cd|e3 c dcBA|F6 af|
-e3 c dcBA|c2 B2 B2 EF|A3 c BA F2|E6:|
+K: Dmaj
+|"D"Bddd d2 dd|ef f2 ed d2|Bddd ed d2|"D"edde "Bm" f2 ff|
+"D"Bddd d2 dd|ef f2 ed d2|"Bm"e2 f2 ed d2|"G"B8:||
+|"D"ef a2 a2 aa|b2 a2 fe d2|"Bm"f2 b2 b2 a2|ba f2 a4|
+"D"ef a2 a2 aa|b2 a2 fe d2|"Bm"e2 f2 ed d2|"G"B8:||
+
     </textarea>
   </div>
 </body>
