--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
 	<title>The Courtesy Turners</title>
 	<script src="abcjs/dist/abcjs-basic.js" type="text/javascript"></script>
-    <script>
+  <script>
 
     function myFunction() {
         var input, filter, table, tr, td, i, txtValue;
@@ -29,12 +29,16 @@
       }</script>
 </head>
 <body>
-<input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
     <ul style="list-style-type:none;" id="tunes">
+      <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for names.." title="Type in a name">
         <table id="myTable">
         <tr>
-            
-    <td><a href="HuntingTheBuffalo.html">Hunting The Buffalo</a></td>
+    <td><a href="Door_County_2.html">Door County #2 by Larry Unger</a></td>
+    <td>Dmaj</td>
+    <td>4/4</td>
+</tr>
+<tr>
+    <td><a href="Hunting_The_Buffalo.html">Hunting The Buffalo</a></td>
     <td>Dmaj</td>
     <td>4/4</td>
 </tr>
