--- a/courtesyturners/Hunting_The_Buffalo.html
+++ b/courtesyturners/Hunting_The_Buffalo.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>Macpherson's Lament Emix 4/4</title>
+  <title>Hunting The Buffalo Dmaj 4/4</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -71,16 +71,16 @@
     <div id="audio"></div>
 	  <br>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
-X: 3
-T: Macpherson's Lament
-R: barndance
+X: 4
+T: Hunting The Buffalo
+R: reel
 M: 4/4
 L: 1/8
-K: Emix
-|:E2|A3 B c2 BA|BABc B2 EF|A3 B c3B A2|F6 EF|
-A3 B c2 BA|BABc B2 EF|A3 c BA F2|E6:|
-|:cd|e3 c dcBA|c2 B2 B2 cd|e3 c dcBA|F6 af|
-e3 c dcBA|c2 B2 B2 EF|A3 c BA F2|E6:|
+K: Dmaj
+e2|"D"f4 fede|fedc B2A2|f4 fede|"D"fefa "C" b2 a2|
+"D"f4 fede|fedc B2A2|f4 ed c2|"Bm"B3 A B2:||
+"G"A2|B3 A B2 A2|BABc d2 A2|BABc d2 de|"D"f2f2 e2d2|
+"G"B3 A B2 A2|BABc d2 de|"D"f2f2 e2d2|"Bm"B3 A B2:||
     </textarea>
   </div>
 </body>
