--- a/courtesyturners/Salt_Spring.html
+++ b/courtesyturners/Salt_Spring.html
@@ -11,6 +11,8 @@
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
+    
+    var visualOptions = { responsive: 'resize' };
     var abcjsEditor;
 
     window.onload = function () {
@@ -61,6 +63,8 @@
   </script>
 </head>
 <body>
+  <header>
+  </header>
   <div class="container">
     <hr>
     <div id="paper"></div>
@@ -73,8 +77,8 @@ R: reel
 M: 4/4
 L: 1/8
 K: Amaj
-e2 e>e fe2f-|fe c/B/A c2 c/B/A/c/|B2 B>B cB2c-|cB A<G F3A|
-B2 B>B cB2c-|cB A<G F3E|F2 A>A BA F/E/D| E4-EA/B/ c/B/A/G/ ]|
+A4 A4| A4 A2 c2||e2 e>e fe2f-|fe c/B/A c2 c/B/A/c/|B2 B>B cB2c-|cB A<G F3A|
+B2 B>B cB2c-|cB A<G F3E|F2 A>A BA F/E/D| E4-EA/B/ c/B/A/G/ ||
 |:F2G2 A2c2|F2G2 A4|F2G2 A2c2|1 cB3-BA/B/ c/B/A/G/:|2 cB3- B2 A/B/c/d/||
     </textarea>
   </div>
