--- a/courtesyturners/Door_County_2.html
+++ b/courtesyturners/Door_County_2.html
@@ -74,10 +74,11 @@
 X: 4
 T: Door County #2 by Larry Unger
 R: reel
+Q:1/2=110
 M: 4/4
 L: 1/8
 K: Dmaj
-|"D"Bddd d2 dd|ef f2 ed d2|Bddd ed d2|"D"edde "Bm" f2 ff|
+x8||"D"Bddd d2 dd|ef f2 ed d2|Bddd ed d2|"D"edde "Bm" f2 ff|
 "D"Bddd d2 dd|ef f2 ed d2|"Bm"e2 f2 ed d2|"G"B8:||
 |"D"ef a2 a2 aa|b2 a2 fe d2|"Bm"f2 b2 b2 a2|ba f2 a4|
 "D"ef a2 a2 aa|b2 a2 fe d2|"Bm"e2 f2 ed d2|"G"B8:||
