--- a/courtesyturners/McPhersons_Lament.html
+++ b/courtesyturners/McPhersons_Lament.html
@@ -74,13 +74,15 @@
 X: 3
 T: Macpherson's Lament
 R: barndance
+Q:1/2=105
 M: 4/4
 L: 1/8
 K: Emix
-|:E2|A3 B c2 BA|BABc B2 EF|A3 B c3B A2|F6 EF|
+x8 ||:E2|A3 B c2 BA|BABc B2 EF|A3 B cB A2|F6 EF|
 A3 B c2 BA|BABc B2 EF|A3 c BA F2|E6:|
 |:cd|e3 c dcBA|c2 B2 B2 cd|e3 c dcBA|F6 af|
 e3 c dcBA|c2 B2 B2 EF|A3 c BA F2|E6:|
+    
     </textarea>
   </div>
 </body>
