--- a/courtesyturners/Old_Horse_and_Buggy.html
+++ b/courtesyturners/Old_Horse_and_Buggy.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>L'Air Mignonne by Simon Riopel Amaj 4/4</title>
+  <title>Old Horse and Buggy A 4/4</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -71,17 +71,23 @@
     <div id="audio"></div>
 	  <br>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
-X: 4
-T: L'Air Mignonne by Simon Riopel
-R: barndance
-Q:1/2=60
-M: 4/4
-L: 1/8
-K: Amaj
-x8 ||EAB|c3e cBAB|c3e cBAB|F3A E3 c|BAGA BEAB|
-c3e cBAB|c3e cBAB|F3A E3 c|BAGB ABce||
-f3a fece|f3a fecA|F3A E3c|BAGA BEce|
-f3a fece|f3a fecA|F3A E3c|BAGB A||
+X:1
+T:Old Horse and Buggy
+Q:1/2=110
+M:4/4
+L:1/8
+R:Reel
+S:Art Stamper 
+N:From a transcription by John Lamancusa, by permission; see http://www.mne.psu.edu/lamancusa/tunes.htm, adapted from https://tunearch.org/wiki/Old_Horse_and_Buggy
+K:A
+x8 ||"A"A2 A2 cBAA|c2e4 EF|A2A2 cBAA|F2E4 EF|
+A2 Ac BABA|cdef e2 ef|ecBA F(GA)c|B/c/B AB A2 EF:||
+ef2=g fede|fa2b a3f|e2 ef ecBA|ce2(e e2)ce|
+ef2=g fede|faab a2 af|e2c2 BAAc|B/c/B AB A4||
+P:"Alternate A part"
+[A,2E2A2] Ac BABA|c2(e2e2)e2|E2 Ac BABA|c2A2E2A2|
+[A,2E2A2] Ac BABA|cdef e2 ef|ecBA FGAc|B/c/B AB A4||
+    
     </textarea>
   </div>
 </body>
