--- a/courtesyturners/Ninas_Jig.html
+++ b/courtesyturners/Ninas_Jig.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>Macpherson's Lament Emix 4/4</title>
+  <title>Nina's Amaj 6/8</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -71,19 +71,16 @@
     <div id="audio"></div>
 	  <br>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
-X: 3
-T: Macpherson's Lament
-R: barndance
-Q:1/4=110
-M: 4/4
+X: 1
+T: Nina's
+R: jig
+M: 6/8
 L: 1/8
-K: Emix
-x8 ||E2|"A"A3 B c2 BA|"E"BABc B2 EF|"A"A3 B cB A2|"D"F6 EF|
-"A"A3 B c2 BA|"E"BABc B2 EF|"A"A3 c "D"BA F2|"E"E6|
-|cd|"A"e3 c dcBA|"E"c2 B2 B2 cd|"A"e3 c dcBA|"D"F6 af|
-"A"e3 c dcBA|"E"c2 B2 B2 EF|"A"A3 c "D"BA F2|"E"E6|
-    
-    
+K: Amaj
+F|FAB c2B|BAc BAF|FAB c2B|Bce f2F|
+FAB c2B|BAc BAB|BAc BAF|AFE F2:|
+f|f2f ecB|BAc BAF|f2e ecB|Bce f2f|
+fea fea|fec BAB|BAc BAc|BAE F2:|
     </textarea>
   </div>
 </body>
