--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -53,6 +53,16 @@
     <td>4/4</td>
 </tr>
 <tr>
+    <td><a href="Ninas_Jig.html">Nina's</a></td>
+    <td>Amaj</td>
+    <td>6/8</td>
+</tr>
+<tr>
+    <td><a href="Ob_la_di.html">Obli-Di Obli-Da</a></td>
+    <td>Dmaj</td>
+    <td>4/4</td>
+</tr>
+<tr>
     <td><a href="Old_Horse_and_Buggy.html">Old Horse and Buggy</a></td>
     <td>A</td>
     <td>4/4</td>
