--- a/courtesyturners/Rock_Andy.html
+++ b/courtesyturners/Rock_Andy.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../style.css"/>
   <link rel="stylesheet" href="../dist/abcjs-audio.css"/>
 
-  <title>Nina's Amaj 6/8</title>
+  <title>Rock Andy Amix C|</title>
   <link rel="stylesheet" type="text/css" href="../abcjs-audio.css">
   <script src="../dist/abcjs-basic.js" type="text/javascript"></script>
   <script type="text/javascript">
@@ -71,17 +71,20 @@
     <div id="audio"></div>
 	  <br>
         <textarea id="abc" cols="80" rows="15" spellcheck="false">
-X: 1
-T: Nina's
-R: jig
-M: 6/8
-L: 1/8
-K: Amaj
-F|"F#,"FAB c2B|BAc BAF|FAB c2B|"Bm"Bce f2F|
-"F#m"FAB c2B|BAc BAB|"Bm"BAc BAF|"C#m"AFE "F#m"F2:|
-f|"Bm"f2f ecB|"F#m"BAc BAF|"Bm"f2e ecB|"E"Bce f2f|
-"A"fea fea|"F#m"fec BAB|"C#m"BAc BAc|"F#m"BAE F2:|
-    
+X:1
+T:Rock Andy
+T:I'll Learn You how to Rock Andy
+S:Owen "Snake" Chapman (1919-2002, Canada, Pike County, 
+N:eastern Kentucky)
+M:C|
+L:1/8
+D:Rounder 0378, Owen Chapman - "Up in Chapman's Hollow" (1975)
+Z:Transcribed by Andy Kuntz
+K:Amix
+ea-ab a3b|a2g2 e4|eg-ga g2g2|(g/a/g) e2 d4|
+ea-ab a2a2|gage d2[e2e2]-|[e2e2]ge d=cAB|1 A3B A4:|2 A3B A2 [A2A2]-||
+|:[A2A2]AA cAcd|efe2 d2 dB|[M:2/4]G2G2|[M:C|]BGAG BGAG|
+E2 !slide![A4A4]AB|cAcd efe2|[M:2/4]d2cd|[M:C|]e2g2 edBB|A3B A4:|]
     </textarea>
   </div>
 </body>
