--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -58,11 +58,6 @@
     <td>6/8</td>
 </tr>
 <tr>
-    <td><a href="Ob_la_di.html">Obli-Di Obli-Da</a></td>
-    <td>Dmaj</td>
-    <td>4/4</td>
-</tr>
-<tr>
     <td><a href="Old_Horse_and_Buggy.html">Old Horse and Buggy</a></td>
     <td>A</td>
     <td>4/4</td>
@@ -71,6 +66,11 @@
     <td><a href="Reign_of_Love.html">Reign Of Love by Keith Murphy</a></td>
     <td>Edor</td>
     <td>4/4</td>
+</tr>
+<tr>
+    <td><a href="Rock_Andy.html">Rock Andy</a></td>
+    <td>Amix</td>
+    <td>C|</td>
 </tr>
 <tr>
     <td><a href="Salt_Spring.html">Salt Spring by John Reischman</a></td>
