Mouse In The Kitchen

--- a/courtesyturners/index.html
+++ b/courtesyturners/index.html
@@ -53,6 +53,11 @@
     <td>4/4</td>
 </tr>
 <tr>
+    <td><a href="Mouse_In_The_Kitchen.html">Mouse In The Kitchen</a></td>
+    <td>Amaj</td>
+    <td>6/8</td>
+</tr>
+<tr>
     <td><a href="Ninas_Jig.html">Nina's</a></td>
     <td>Amaj</td>
     <td>6/8</td>
