Change Courtesy Turners name

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <a href="index.html"><div class="header">johnmicheaelmurner.github.io</div></a>
 </header>
 <ul style="list-style-type:none;" id="tunes">
-    <a href="courtesyturners/index.html">
+    <a href="tunes/index.html">
         <div>
-         <span>The Courtesy Turners</span>
+         <span>Tunes</span>
         </div>  
     </a>
     </br>
