--- a/tunes/build_tools/index.html
+++ b/tunes/build_tools/index.html
@@ -5,7 +5,7 @@
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="../style.css"/>
-	<title>The Courtesy Turners</title>
+	<title>Tunes</title>
 	<script src="abcjs/dist/abcjs-basic.js" type="text/javascript"></script>
   <script>
 
